# workspace

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.multi  README.md  SVN项目管理实践.doc  TARGET.mk  VERSION.mk  bashtt.sh  build.sh  cmm_config.rar  defines.h  ftp.sh  getopt.c  gmon.out  hello_world.c  hello_world.sh  isocfl.tgz  line.sh  log.txt  mylist_extasks.h  mylog.c  mylog.h  mymd5.c  mymd5.h  mystring.c  mystring.h  pipe.c  pthread_sync_test.c  sleepsort.sh  src.rar  svn.md  svn.txt  tags  test.c  test.java  usage.txt  v_JULY_v.chm  wcommon.c
buildx/: CMakeCache.txt  cmake_install.cmake
buildx/src/: Makefile  cmake_install.cmake
buildx/test/: Makefile  cmake_install.cmake
c++1x/: c++11_test.cpp  c++14_test.cpp  c++1x_thread.cpp  c1x_thread.cpp  stl_find_if.cpp
cfgfiles/: .bash_aliases  .bashrc  .gitconfig  .gitignore_global  .tmux.conf  .vimrc  .vimrc.bundles  .vimrc.local  .ycm_extra_conf.py  .zshrc  .zshrc.local  _vimperatorrc  brew.sh  config-highlight.cfg  setup_env.sh
cfgfiles/.moc/: config  config.example  last_directory  playlist.m3u
cfgfiles/.moc/cache/: __db.001  __db.002  __db.003  __db.004  tags.db
doc/: exclist.txt
dpopen/: Linux 上实现双向进程间通信管道.html
excLOG/: CMakeLists.txt  exclog.sublime-project
excLOG/src/: _Makefile  exclog_local.c  exclog_query.c
excLOG/src/include/: exclog_local.h  exclog_public.h  exclog_sysklogd.h
excLOG/test_local/: _Makefile  exclog_local_server.c  exclog_local_test.c  logconfig.ini  lpconfig.h
excLOG/test_remote/: CMakeLists.txt  _Makefile
include/: exc.h  exclist.h  exclog.h  exclog_x.h  excmd5.h  excport.h  xeHSC_port.c  xeHSC_port.h  xeR.h
include/.svn/: entries
lib/Debug/.svn/: entries
lib/Debug/.svn/text-base/: dllxeHSC.dll.svn-base
lib/Release/.svn/: entries
libLog/: .tags  _Makefile  exclog.sublime-workspace
libLog/release/include/: exclog.h
libLog/src/: CMakeLists.txt  exclog.c  exclog_public.c  exclog_remote.c  exclog_store.c  exclog_sysklogd.c
libLog/src/include/: exclog_query.h  exclog_remote.h  exclog_store.h
libLog/test_local/: CMakeLists.txt  glist.c  glist.h  lpconfig.c  message0
libLog/test_query/: CMakeLists.txt  _Makefile  exclog_query_test.c
libLog/test_remote/: exclog_remote_test.c
myc/: Makefile.mk.ex  log.c  myconf_struct.h  mylink.c  mylink_struct.h  sip_conf.c  sip_conf.h
mycJSON/: a.out
mymemwatch/: a.out  test2.c
mysocket_cs/: server.c
myxml/: Makefile  myxml.c  myxml_create.c  myxml_head.c  myxml_struct.h  projector.xml
myxml/test/: main.c
release/doc/: linux_include.txt
release/include/: exc.h  excR.h  excT.h
release/include/.svn/text-base/: xeLOG_internal.h.svn-base
release/test/: CMakeLists.txt  test.c
src/: CMakeLists.txt  excmd5.c  excport.c  xeL.h  xeT.h
src_core/: CFG.mk  LIB.mk  Makefile  Makefile.core  Makefile.sub  lpconfig.c  lpconfig.c.pre  md5.c  memwatch.c  uglib.c  xeMEM.c  xePORT.c  xeRB-core.c  xeSIMG_util.c
src_core/include/: glist.h  lpconfig.h  md5.h  md5_uglib.h  uglib.h  xeDEX.h  xeHSC.h  xeL.h  xeMEM.h  xePORT.h  xeR.h  xeSIMG.h  xeSIMG_util.h  xeT.h
src_ext/: Makefile  clientA.c.orig  common.h  extensionNames.xml  log.h  mempool.cpp  myconf.c  myconf.h  mylink.h  mymem.c  mymem.h  myprint.c  myprint.h  mystring.c  myxml.c  myxml.h  myxml_create.c  myxml_head.c  profiler.cpp  profiler.h  test_mem.cpp  test_per.cpp
src_mod/: Makefile  Makefile.sub.config  Makefile.sub.knowlege
src_mod/conf/: ats.conf  ats_linE.conf
src_mod/conf/.svn/: entries
src_mod/conf/.svn/text-base/: config.conf.svn-base
src_mod/conf/config_case_conf/: EN_G.conf  EN_S.conf  EQ_G.conf  EQ_S.conf  STAT.conf
src_mod/doc/: config_usage.odt
src_mod/src/: core.c  core.h  glist.c  glist.h  history_stream_main.c  lpconfig.c  lpconfig.h  main.c  module.c  module.h  uglib.h  wlog.c  wlog.h
src_mod/src/config/: config.h  config_func.c  config_func.h  config_list.c  config_main.c  config_para.h
src_mod/src/knowlege/: knowlege.h  knowlege_func.c  knowlege_main.c  knowlege_para.h
template/doc/: DevSpec_CodeStyle-C.odt  DevSpec_CodeStyle-C_sample_code.c  DevSpec_CodeStyle-C_sample_code.h  xeR.h
test/: CMakeLists.txt  Makefile  exclist_tasks.c  helloworld.c  log.c  log.h  log_config.c  log_config.h  resume.c  test.c  test_c.c  test_cjson.c  test_cxx.cpp  test_log.h  test_memwatch.c  test_note.c  tools.c  vi_pattern.txt  x.cpp  x.h  y.cpp
tweetableMathPic/: MathPic2.ppm  MathPic3.ppm  MathPic4.ppm  MathPic5.ppm  MathPic6.ppm  MathPic7.ppm  pixel.cpp
xeHSC/: Introduce_libxeHSC.txt  Makefile  README.first  ReleaseNotes  TARGET.mk_X86_SIMULATE.PC.Unknown  xeHSC_DG.odt
xeHSC/.svn/: entries
xeHSC/demo/.svn/: entries
xeHSC/ext/.svn/: entries
xeHSC/ext/include/: list.h
xeHSC/ext/include/.svn/: entries
xeHSC/ext/include/.svn/text-base/: xelog.h.svn-base
xeHSC/ext/lib/.svn/: entries
xeHSC/ext/src/.svn/: entries
xeHSC/ext/src/.svn/text-base/: memwatch.c.svn-base
xeHSC/include/: xeHSC.h  xelog.h
xeHSC/lib/.svn/: entries
xeHSC/lib/Debug/: dllxeHSC.lib
xeHSC/lib/Release/: dllxeHSC.lib
xeHSC/src/: Makefile  xeHSC.c  xeHSC_INC.h  xeLOG_internal.h
xeHSC/src/.svn/: entries
xeHSC/test/: Makefile
xeHSC/test/.svn/: entries
xeHSC/test/.svn/text-base/: tst_version.c.svn-base
xeHSC/tools/: Makefile
xeHSC/tools/.svn/: entries
xeHSC/tools/.svn/text-base/: libHSC_version.c.svn-base
xeHSC/win/.svn/: entries
xeHSC/win/vc6.0/.svn/: entries
xeHSC/win/vc6.0/dllxeHSC/: dllxeHSC.dsw
xeHSC/win/vc6.0/dllxeHSC/.svn/: entries
xeHSC/win/vc6.0/dllxeHSC/.svn/text-base/: dllxeHSC.def.svn-base  dllxeHSC.dsp.svn-base
xeHSC/win/vc6.0/dllxeHSC/Debug/.svn/: entries
xeHSC/win/vc6.0/dllxeHSC/Debug/.svn/text-base/: dllxeHSC.dll.svn-base  dllxeHSC.lib.svn-base
xeHSC/win/vc6.0/dllxeHSC/Release/: dllxeHSC.lib
xeHSC/win/vc6.0/dllxeHSC/Release/.svn/: entries
xeHSC/win/vc6.0/dllxeHSC/Release/.svn/text-base/: dllxeHSC.dll.svn-base
