
AUX_SOURCE_DIRECTORY(. EXC_SRCS)
# INCLUDE_DIRECTORIES(./)
# LINK_DIRECTORIES(./)

ADD_LIBRARY (${LIB_STATIC} STATIC ${EXC_SRCS})
SET_TARGET_PROPERTIES(${LIB_STATIC} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
ADD_LIBRARY (${LIB_SHARED} SHARED ${EXC_SRCS})
SET_TARGET_PROPERTIES(${LIB_SHARED} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
# SET_TARGET_PROPERTIES(${LIB_SHARED} PROPERTIES VERSION 1.01 SOVERSION 1)

TARGET_LINK_LIBRARIES(${LIB_STATIC} excLOG)
TARGET_LINK_LIBRARIES(${LIB_SHARED} excLOG)

INSTALL(TARGETS ${LIB_STATIC} ${LIB_SHARED}
  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}
  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib
  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib)
