
AUX_SOURCE_DIRECTORY(. EXC_SRCS)
# INCLUDE_DIRECTORIES(./)
# LINK_DIRECTORIES(./)

ADD_LIBRARY (${LIB_STATIC} STATIC ${EXC_SRCS})
SET_TARGET_PROPERTIES(${LIB_STATIC} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
ADD_LIBRARY (${LIB_SHARED} SHARED ${EXC_SRCS})
SET_TARGET_PROPERTIES(${LIB_SHARED} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
# SET_TARGET_PROPERTIES(${LIB_SHARED} PROPERTIES VERSION 1.01 SOVERSION 1)

LIST (APPEND staticlinks libexcLOG.a pthread)
LIST (APPEND sharedlinks libexcLOG.so pthread)

TARGET_LINK_LIBRARIES(${LIB_STATIC} ${staticlinks})
TARGET_LINK_LIBRARIES(${LIB_SHARED} ${sharedlinks})

#==install for release
INSTALL(TARGETS ${LIB_STATIC} ${LIB_SHARED}
  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/release
  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/release/lib
  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/release/lib)
#==install to sys
INSTALL(TARGETS ${LIB_STATIC} ${LIB_SHARED}
  RUNTIME DESTINATION /usr/local 
  LIBRARY DESTINATION /usr/local/lib
  ARCHIVE DESTINATION /usr/local/lib)
