
ADD_DEFINITIONS(-DEXCLOG_PREFIX=\"libEXC\")
# ADD_DEFINITIONS(-DCONFIG_USE_EXTERNAL_EXCLOG=1)
# ADD_DEFINITIONS(-DEXCLOG_2_LOCAL=1)
# ADD_DEFINITIONS(-DEXCLOG_2_REMOTE=1)
# ADD_DEFINITIONS(-UCONFIG_USE_EXTERNAL_XELOG)

# AUX_SOURCE_DIRECTORY(. EXC_SRCS)
ADD_EXECUTABLE(test.bin test.c)

# TARGET_LINK_LIBRARIES(test.bin excLOG_LOCAL pthread)
TARGET_LINK_LIBRARIES(test.bin ${LIB_STATIC})
# TARGET_LINK_LIBRARIES(test.bin ${LIB_SHARED})
