#====for standalone build
# CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 
# PROJECT (TEST_LIBEXC C) 
# SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -ggdb -DDEBUG=1")
# SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O3 -Wall -DNDEBUG")
# ADD_DEFINITIONS(-DCONFIG_EXC_DEVPLAT_LINUXGCC_32)
# SET( LIB_STATIC libEXC.a )
# SET( LIB_SHARED libEXC.so )
# 
##========test_exclog===============
ADD_DEFINITIONS(-DEXCLOG_PREFIX=\"libEXC\")
# ADD_DEFINITIONS(-DCONFIG_USE_EXTERNAL_EXCLOG=1)
# ADD_DEFINITIONS(-DEXCLOG_2_LOCAL=1)
# ADD_DEFINITIONS(-DEXCLOG_2_REMOTE=1)
# ADD_DEFINITIONS(-UCONFIG_USE_EXTERNAL_XELOG)

#========test_memwatch===============
ADD_DEFINITIONS(-DMEMWATCH -DMEMWATCH_STDIO)

# AUX_SOURCE_DIRECTORY(. EXC_SRCS)
LIST (APPEND EXC_SRCS test.c test_memwatch.c test_cjson.c)
ADD_EXECUTABLE(test.bin ${EXC_SRCS})

# TARGET_LINK_LIBRARIES(test.bin excLOG_LOCAL pthread)
TARGET_LINK_LIBRARIES(test.bin ${LIB_STATIC})
# TARGET_LINK_LIBRARIES(test.bin ${LIB_SHARED})
