
AUX_SOURCE_DIRECTORY(. TLOG_SRCS)
INCLUDE_DIRECTORIES(./include)

IF(BUILD_TARGET STREQUAL local)
	ADD_LIBRARY (${LIB_LOCAL} STATIC ${TLOG_SRCS})
	SET_TARGET_PROPERTIES(${LIB_LOCAL} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
	INSTALL(TARGETS ${LIB_LOCAL}
	  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/release
	  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/release/lib
	  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/release/lib)
	INSTALL(TARGETS ${LIB_LOCAL}
# 	  RUNTIME DESTINATION /usr/local
	  LIBRARY DESTINATION /usr/local/lib
	  ARCHIVE DESTINATION /usr/local/lib)

ELSE(BUILD_TARGET STREQUAL remote)
	ADD_LIBRARY (${LIB_REMOTE} SHARED ${TLOG_SRCS})
	SET_TARGET_PROPERTIES(${LIB_REMOTE} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
	# SET_TARGET_PROPERTIES(${LIB_REMOTE} PROPERTIES VERSION 1.01 SOVERSION 1)
	INSTALL(TARGETS ${LIB_REMOTE}
	  RUNTIME DESTINATION ${PROJECT_SOURCE_DIR}/release
	  LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/release/lib
	  ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/release/lib)
	INSTALL(TARGETS ${LIB_REMOTE}
# 	  RUNTIME DESTINATION /usr/local
	  LIBRARY DESTINATION /usr/local/lib
	  ARCHIVE DESTINATION /usr/local/lib)
ENDIF()


